[tool.poetry]
name = "aw-research"
version = "0.1.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]

[tool.poetry.scripts]
aw-research = "aw_research.main:main"

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.18.0"
matplotlib = "^3.1.2"
pydash = "^4.7.6"
iso8601 = "^0.1.12"
pandas = "^1.0.3"
pytz = "^2019.3"
joblib = "^0.14.1"
toml = "^0.10.0"
aw-core = {git = "https://github.com/ActivityWatch/aw-core.git"}
aw-client = {git = "https://github.com/ActivityWatch/aw-client.git"}
google-api-python-client = "^1.9.3"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
pydash = "^4.7.6"
mypy = "*"
pytest = "^5.3.2"
pytest-cov = "^2.8.1"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
