[tool.poetry]
name = "aw-research"
version = "0.1.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]

[tool.poetry.scripts]
aw-research = "aw_research.main:main"

[tool.poetry.dependencies]
python = "^3.7.1"
aw-core = "^0.5"
aw-client = "^0.5"
numpy = "^1.18.0"
matplotlib = "^3.1.2"
pydash = "^4.7.6"
iso8601 = "*"
pandas = "^1.0.3"
pytz = "^2019.3"
joblib = "^0.14.1"
toml = "^0.10.0"
google-api-python-client = "^1.9.3"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
pydash = "^4.7.6"
mypy = "*"
pytest = "^6.1"
pytest-cov = "*"
black = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
