[tool.poetry]
name = "aw-research"
version = "0.1.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]

[tool.poetry.scripts]
aw-research = "aw_research.main:main"

[tool.poetry.dependencies]
python = "^3.8"
aw-core = "^0.5"
aw-client = "^0.5"
numpy = "*"
matplotlib = "*"
pandas = "*"
joblib = "*"
pydash = "*"
iso8601 = "*"
pytz = "*"  # really needed?
toml = "*"
google-api-python-client = "*"
tabulate = "*"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "*"
pytest-cov = "*"
black = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
